refactor organization of SearchController and results directives

--- a/app/js/templates/search_results.html
+++ b/app/js/templates/search_results.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="SearchController">
+<div>
   <section class="row">
     <div class="container col-2-3">
       <!-- Table Header -->
@@ -67,5 +67,3 @@
   </section>
   <section class="map" data-results-map></section>
 </div>
-
-
