--- a/app/sass/_component/results.sass
+++ b/app/sass/_component/results.sass
@@ -127,14 +127,28 @@ h4[data-icon="open"]
   font-size: em(15px)
 
 // icon to close
-
 h4[data-icon="close"]
   @include icon(after, minus)
   color: $color-primary
   font-size: em(15px)
 
 // map
-
 #map-canvas
+  width: 800px
+  min-height: 800px
+  padding-right: 80px
+
+body
+  display: flex
+  flex-direction: row
+  justify-content: space-around
+
+#result_bottom
+  height: 1.2em
   width: 500px
-  height: 400px
+  background-color: $color-primary
+  text-align: right
+  font-size: 2em
+  color: white
+  @include icon(after, arrow-up)
+  @include icon(before, arrow-down)
