--- a/app/js/templates/home.html
+++ b/app/js/templates/home.html
@@ -1,4 +1,6 @@
-
+<div class="logoContainer">
+  <img class="headerLogo" src="img/fpo_logo.png">
+</div>
 <section data-ng-controller="UserController">
   <!-- Log In Modal 1 -->
   <div class="md-modal md-effect-1" id="modal-1">
@@ -65,7 +67,7 @@
   </div>
 </section>
 <!-- Search -->
-<section>
+<section data-ng-controller="SearchController">
   <form id="theForm" class="searchform" autocomplete="off">
     <div class="searchFormInner">
       <main>
@@ -81,4 +83,5 @@
       <span class="error-message"></span>
     </div>
   </form>
+  <div data-search-results ng-if="sales"></div>
 </section>
