--- a/app/js/templates/search_results.html
+++ b/app/js/templates/search_results.html
@@ -65,5 +65,5 @@
       </table> <!-- end of table -->
     </div>
   </section>
-  <section class="map" data-results-map></section>
+  <ui-gmap-google-map center="{latitude: 45, longitude: -73}" zoom="8" style="height: 400px;"></ui-gmap-google-map>
 </div>
