--- a/app/sass/style.css
+++ b/app/sass/style.css
@@ -12,7 +12,6 @@
   src: url("fonts/icomoon/icomoon.woff") format("woff");
   src: url("fonts/icomoon/icomoon.ttf") format("truetype");
   src: url("fonts/icomoon/icomoon.svg") format("svg"); }
-
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -104,7 +103,6 @@ section {
   src: url("fonts/icomoon/icomoon.woff") format("woff");
   src: url("fonts/icomoon/icomoon.ttf") format("truetype");
   src: url("fonts/icomoon/icomoon.svg") format("svg"); }
-
 @font-face {
   font-weight: normal;
   font-style: normal;
@@ -114,12 +112,10 @@ section {
   src: url("fonts/icomoon/icomoon.woff") format("woff");
   src: url("fonts/icomoon/icomoon.ttf") format("truetype");
   src: url("fonts/icomoon/icomoon.svg") format("svg"); }
-
 @-moz-document url-prefix() {
   .flex-container {
     width: 100%;
     -moz-box-sizing: border-box; } }
-
 /* General button style (reset) */
 .btn {
   border: none;
@@ -160,8 +156,8 @@ section {
 /* Button 1a (Home Button States) */
 .btn-1a:hover,
 .btn-1a:active {
-  border: 3px solid #a1dbb2;
-  background-color: #a1dbb2;
+  border: 3px solid #A1DBB2;
+  background-color: #A1DBB2;
   color: white; }
 
 @font-face {
@@ -173,12 +169,10 @@ section {
   src: url("fonts/icomoon/icomoon.woff") format("woff");
   src: url("fonts/icomoon/icomoon.ttf") format("truetype");
   src: url("fonts/icomoon/icomoon.svg") format("svg"); }
-
 @-moz-document url-prefix() {
   .flex-container {
     width: 100%;
     -moz-box-sizing: border-box; } }
-
 .userModal {
   color: white;
   background-color: #ff6666;
@@ -254,8 +248,11 @@ button[data-id="login-submit"] {
   width: 40%;
   left: calc(50% - 40%/2); }
   button[data-id="login-submit"]:hover, button[data-id="login-submit"]:active {
-    background-color: #a1dbb2;
+    background-color: #A1DBB2;
     color: white; }
+
+.md-show {
+  visibility: visible; }
 
 .md-modal {
   position: fixed;
@@ -263,8 +260,8 @@ button[data-id="login-submit"] {
   left: 50%;
   width: 50%;
   height: auto;
+  visibility: visible;
   z-index: 2000;
-  visibility: hidden;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -274,49 +271,20 @@ button[data-id="login-submit"] {
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%); }
 
-.md-show {
-  visibility: visible; }
-
-.md-overlay {
+.mdoverlay {
   position: fixed;
   width: 100%;
   height: 100%;
-  visibility: hidden;
+  visibility: visible;
   top: 0;
   left: 0;
+  opacity: 1;
   z-index: 1000;
-  opacity: 0;
   background: rgba(51, 51, 51, 0.8);
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
   -webkit-transition: all 0.3s;
   transition: all 0.3s; }
-
-.md-show ~ .md-overlay {
-  opacity: 1;
-  visibility: visible; }
-
-/* modal styles with animations/transitions */
-/* fade in and scale up */
-.md-effect-1 .md-content {
-  -moz-transform: scale(0.7);
-  -o-transform: scale(0.7);
-  -ms-transform: scale(0.7);
-  -webkit-transform: scale(0.7);
-  transform: scale(0.7);
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  opacity: 0; }
-
-.md-show.md-effect-1 .md-content {
-  -moz-transform: scale(1);
-  -o-transform: scale(1);
-  -ms-transform: scale(1);
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  opacity: 1; }
 
 @media screen and (max-width: 32em) {
   body {
@@ -334,12 +302,10 @@ button[data-id="login-submit"] {
   src: url("fonts/icomoon/icomoon.woff") format("woff");
   src: url("fonts/icomoon/icomoon.ttf") format("truetype");
   src: url("fonts/icomoon/icomoon.svg") format("svg"); }
-
 @-moz-document url-prefix() {
   .flex-container {
     width: 100%;
     -moz-box-sizing: border-box; } }
-
 .logoContainer {
   position: relative;
   padding-top: 20px; }
@@ -403,7 +369,7 @@ button[data-id="login-submit"] {
   font-size: 1em;
   line-height: 1; }
   #search:focus {
-    border: 3px solid #a1dbb2;
+    border: 3px solid #A1DBB2;
     outline: none; }
   #search.placeholder {
     font-weight: 300;
@@ -527,3 +493,5 @@ button[data-id="login-submit"] {
   .flex-container {
     width: 100%;
     -moz-box-sizing: border-box; } }
+
+/*# sourceMappingURL=style.css.map */
