--- a/app/sass/_component/buttons.css
+++ b/app/sass/_component/buttons.css
@@ -47,7 +47,8 @@
   border: 3px solid #ff6666;
   font-weight: 400;
   color: #ff6666;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  text-align: right; }
 
 /* Button 1a (Home Button States) */
 .btn-1a:hover,
