--- a/app/sass/_global/icons.css
+++ b/app/sass/_global/icons.css
@@ -1,5 +1,11 @@
 @font-face {
-  font-family: 'FontAwesome', sans-serif;
-  src: url("http://netdna.bootstrapcdn.com/font-awesome/4.2.0/fonts"); }
+  font-family: 'FontAwesome';
+  src: url("../fonts/font-awesome/fontawesome-webfont.eot");
+  src: url("../fonts/font-awesome/fontawesome-webfont.eot") format("embedded-opentype");
+  src: url("../fonts/font-awesome/fontawesome-webfont.woff") format("woff");
+  src: url("../fonts/font-awesome/fontawesome-webfont.ttf") format("truetype");
+  src: url("../fonts/font-awesome/fontawesome-webfont.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 
 /*# sourceMappingURL=icons.css.map */
