--- a/app/sass/_global/icons.scss
+++ b/app/sass/_global/icons.scss
@@ -1,7 +1,12 @@
-// Font Icon Source
 @font-face {
-  font-family: 'FontAwesome', sans-serif;
-  src: url('http://netdna.bootstrapcdn.com/font-awesome/4.2.0/fonts');
+  font-family: 'FontAwesome';
+  src: url('../fonts/font-awesome/fontawesome-webfont.eot');
+  src: url('../fonts/font-awesome/fontawesome-webfont.eot') format('embedded-opentype');
+  src: url('../fonts/font-awesome/fontawesome-webfont.woff') format('woff');
+  src: url('../fonts/font-awesome/fontawesome-webfont.ttf') format('truetype');
+  src: url('../fonts/font-awesome/fontawesome-webfont.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 // Font Icon Sass Map
@@ -25,7 +30,7 @@ $icons: (
 );
 
 // Base styles for font icons
-// Styles are included in Icon-Mixins.scss
+// Styles are included in icon-mixins.scss
 
 $icon-styles: (
   font-family: "FontAwesome",
@@ -34,5 +39,5 @@ $icon-styles: (
   font-variant: normal,
   text-transform: none,
   speak: none,
-  line-height: 1,
+  line-height: 1
 );
