make map visible with styling

--- a/app/js/templates/search_results.html
+++ b/app/js/templates/search_results.html
@@ -38,7 +38,7 @@
               <ol name="event" data-type="event-info">
                 <h4>{{sale.title}}</h4>
                 <li><strong>Location:</strong>{{sale.address}}</li>
-                <li><time datetime><strong>Date:</strong>{{sale.dateStart + ' - ' + sale.dateEnd}}</time></li>
+                <li><time datetime><strong>Date:</strong>{{(sale.dateStart  | date : 'mediumDate') + ' - ' + (sale.dateEnd  | date : 'mediumDate')}}</time></li>
               </ol>
             </td>
             <!-- distance col -->
@@ -52,8 +52,8 @@
             <td class="date" colspan="1">
               <ol name="event" data-type="date-time">
                 <h5>Date</h5>
-                <li><time datetime>{{sale.dateStart}}</time></li>
-                <li><time datetime>{{sale.timeStart}}</time></li>
+                <li><time datetime>{{(sale.dateStart  | date : 'mediumDate')}}</time></li>
+                <li><time datetime>{{sale.timeStart | date : 'shortTime'}}</time></li>
               </ol>
             </td>
             <!-- icon col -->
@@ -65,5 +65,5 @@
       </table> <!-- end of table -->
     </div>
   </section>
-  <ui-gmap-google-map center="{latitude: 45, longitude: -73}" zoom="8" ></ui-gmap-google-map>
+  <ui-gmap-google-map id="map-canvas" center="{latitude: 45, longitude: -73}" zoom="8"></ui-gmap-google-map>
 </div>
