--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -6,7 +6,7 @@
 @import '_component/buttons';
 @import '_component/modal';
 @import '_component/home';
-//@import '_component/results';
+@import '_component/results';
 // layouts
 @import '_layout/grid';
 // mixins
