--- a/app/sass/_component/results.sass
+++ b/app/sass/_component/results.sass
@@ -4,7 +4,7 @@
 @import '../_mixin/flexbox-mixin'
 @import '../_mixin/clearfix-mixin'
 @import '../_utility/em-function'
-@import '../_mixin/icons-mixin'
+//@import '../_mixin/icons-mixin'
 
 
 table
@@ -56,7 +56,6 @@ table
 
 
 // base table styles
-
 tbody
   white-space: nowrap
 
@@ -81,7 +80,6 @@ table h4
   margin-bottom: 10px
 
 // table header styles
-
 #resultsHeader
   background-color: $color-background
   text-transform: uppercase
@@ -101,13 +99,12 @@ table h4
   font-size: 11px
   li:last-child
     color: $color-primary
-  @include icon(after, caret-down)
+  //@include icon(after, caret-down)
 
 .expandColumn
   min-width: em(25px)
 
 // table data styles
-
 ol[name="event"]
   color: $color-font-primary
   font-size: $base__grid
@@ -120,21 +117,22 @@ ol[data-type="filter"]
   color: $color-font-primary
 
 // icon to expand
-
-h4[data-icon="open"]
-  @include icon(after, plus)
-  color: $color-primary
-  font-size: em(15px)
+//h4[data-icon="open"]
+//  @include icon(after, plus)
+//  color: $color-primary
+//  font-size: em(15px)
 
 // icon to close
-h4[data-icon="close"]
-  @include icon(after, minus)
-  color: $color-primary
-  font-size: em(15px)
+//h4[data-icon="close"]
+//  @include icon(after, minus)
+//  color: $color-primary
+//  font-size: em(15px)
 
 // map
-#map-canvas
+//#map-canvas
+.angular-google-map-container
   width: 800px
+  height: 400px
   min-height: 800px
   padding-right: 80px
 
@@ -150,5 +148,5 @@ body
   text-align: right
   font-size: 2em
   color: white
-  @include icon(after, arrow-up)
-  @include icon(before, arrow-down)
+  //@include icon(after, arrow-up)
+  //@include icon(before, arrow-down)
