remove setting of second cookie

--- a/app/sass/_component/user_profile_subnav.sass
+++ b/app/sass/_component/user_profile_subnav.sass
@@ -6,7 +6,7 @@
 @import '../_utility/em-function'
 @import '../_mixin/transition-mixin'
 @import '../_mixin/transform-mixin'
-@import '../_global/icons'
+//@import '../_global/icons'
 
 @font-face
   font-family: 'FontAwesome'
