--- a/app/sass/style.css
+++ b/app/sass/style.css
@@ -4,6 +4,7 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic);
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic);
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic);
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic);
 @font-face {
   font-weight: normal;
   font-style: normal;
@@ -19,7 +20,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-.clearfix:before {
+.clearfix:before:after {
   content: "";
   display: table; }
 
@@ -28,6 +29,7 @@
 
 body {
   height: 100%;
+  overflow: scroll;
   font-family: "Lato", sans-serif;
   font-size: 100%;
   line-height: 1.25;
@@ -90,7 +92,6 @@ input {
   display: block; }
 
 section {
-  padding: 10em 0 10em 0;
   text-align: center; }
 
 @media screen and (max-width: 44.75em) {
@@ -156,7 +157,8 @@ section {
   border: 3px solid #ff6666;
   font-weight: 400;
   color: #ff6666;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  text-align: right; }
 
 /* Button 1a (Home Button States) */
 .btn-1a:hover,
@@ -344,10 +346,14 @@ button[data-id="login-submit"] {
   -ms-flex-direction: row;
   flex-direction: row; }
 
-.searchform {
+.search-container {
   position: relative;
+  display: block;
+  margin-top: 15%; }
+
+.searchform {
+  position: inherit;
   margin: 0 auto;
-  padding: 2em 0;
   max-width: 600px;
   width: 100%;
   text-align: left; }
@@ -436,18 +442,6 @@ button[data-id="login-submit"] {
     height: inherit;
     background: rgba(0, 0, 0, 0.05);
     content: ""; }
-
-/* Adjust form for smaller screens */
-.searchform,
-#searchLabel {
-  font-size: 2em; }
-
-.searchform,
-#searchLabel {
-  font-size: 1.5em; }
-
-.howSearch {
-  font-size: 60%; }
 
 @font-face {
   font-weight: normal;
@@ -572,6 +566,115 @@ body {
   font-size: 2em;
   color: white; }
 
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+  font-family: "icomoon";
+  src: url("fonts/icomoon/icomoon.eot");
+  src: url("fonts/icomoon/icomoon.eot") format("opentype");
+  src: url("fonts/icomoon/icomoon.woff") format("woff");
+  src: url("fonts/icomoon/icomoon.ttf") format("truetype");
+  src: url("fonts/icomoon/icomoon.svg") format("svg"); }
+
+@-moz-document url-prefix() {
+  .flex-container {
+    width: 100%;
+    -moz-box-sizing: border-box; } }
+
+@font-face {
+  font-family: "FontAwesome";
+  src: url("../fonts/font-awesome/fontawesome-webfont.eot");
+  src: url("../fonts/font-awesome/fontawesome-webfont.eot") format("embedded-opentype");
+  src: url("../fonts/font-awesome/fontawesome-webfont.woff") format("woff");
+  src: url("../fonts/font-awesome/fontawesome-webfont.ttf") format("truetype");
+  src: url("../fonts/font-awesome/fontawesome-webfont.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.logoProfile {
+  position: relative;
+  padding-top: 10px; }
+
+img[data-id="profile-logo"] {
+  position: relative;
+  width: 150px; }
+
+.greeting {
+  display: inline;
+  font-size: 1.5em;
+  color: #666666;
+  font-weight: 400;
+  text-align: center; }
+
+.view-profile {
+  display: inline;
+  margin-left: 20px; }
+
+.user-info {
+  padding: 20px 0px 20px 20px;
+  border: 3px solid #eaeaed; }
+
+.profile-nav {
+  height: 300px;
+  border: 1px solid red; }
+
+.sub-nav {
+  border: 1px solid red;
+  height: 700px;
+  width: 300px; }
+
+.user-event,
+.user-activity {
+  color: white; }
+
+.profile,
+.events {
+  margin-right: 10px;
+  padding: 20px 0px 20px 20px;
+  background-color: #ff6666; }
+  .profile li,
+  .events li {
+    padding-bottom: 10px; }
+
+.events a {
+  color: white;
+  padding-bottom: 10px; }
+
+.events {
+  background-color: #ff9d2e; }
+
+.profile {
+  background-color: #ff6666; }
+
+h4[data-type="profile-header"] {
+  padding-bottom: 10px;
+  color: #666666;
+  text-transform: uppercase; }
+
+.view-event {
+  border: 1px solid; }
+
+.gallery-grid {
+  border: 1px solid blue;
+  position: relative;
+  display: inline; }
+
+.e-gallery {
+  float: left;
+  vertical-align: top;
+  height: 150px;
+  width: 150px;
+  margin: 5px;
+  background-color: green;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  /* stops bg color from leaking outside the border: */ }
+
 /*  SECTIONS  */
 .section {
   clear: both;
@@ -581,18 +684,21 @@ body {
 /*  COLUMN SETUP  */
 .col {
   display: block;
+  float: left;
   margin: 1% 0 1% 2%; }
 
 .col:first-child {
   margin-left: 0; }
 
 /*  GROUPING  */
-.group:before,
-.group:after {
-  content: ""; }
-
 .group {
-  zoom: 1;
+  zoom: 1; }
+  .group:before, .group:after {
+    content: "";
+    display: table; }
+
+.group:after {
+  clear: both;
   /* For IE 6/7 */ }
 
 /*  GRID OF EIGHT  */
