--- a/app/sass/_component/results.sass
+++ b/app/sass/_component/results.sass
@@ -20,30 +20,38 @@ table
 //   -moz-box-sizing: border-box
 //   box-sizing: border-box
 
+.search-results-container
+  display: flex
+  flex-direction: column
 
-.container
-  padding-left: em(20px)
-  padding-right: em(20px)
+  .searchform
+    order: 1
+    max-width: 600px
+    width: 100%
+    text-align: left
+    align-self: center
+    @include clearfix
 
-.grid
-.col-1-3
-.col-2-3
-  padding-left: 15px
-  padding-right: 15px
+  .search-results-view
+    border-top: 1px solid rgba(0,0,0,0.4)
+    margin-top: em(50px)
+    order: 2
+    display: flex
+    flex-direction: row
+    justify-content: center
 
-.col-1-3
-.col-2-3
-  display: inline-block
-  vertical-align: top
+    #results-table
+      order: 1
 
-.col-1-3
-  width: 33.33%
+    #google-map-container
+      order: 2
 
-.col-2-3
-  width: 66.66%
-
+      .angular-google-map-container
+        width: 400px
+        min-height: 400px
+        height: 400px
+        padding-left: em(80px)
 // rows
-
 .row
   width: 1em
   padding: 20px 0 20px 0
@@ -129,17 +137,6 @@ ol[data-type="filter"]
 //  font-size: em(15px)
 
 // map
-//#map-canvas
-.angular-google-map-container
-  width: 800px
-  height: 400px
-  min-height: 800px
-  padding-right: 80px
-
-body
-  display: flex
-  flex-direction: row
-  justify-content: space-around
 
 #result_bottom
   height: 1.2em
