--- a/app/sass/_global/base.sass
+++ b/app/sass/_global/base.sass
@@ -17,6 +17,8 @@ body
   font-size: 100%
   line-height: 1.25
   margin: 0
+  display: flex
+  flex-direction: column
 ul, ol
   padding: 0
   margin: 0
