pull from gabe's fixes

--- a/app/sass/_global/icons.scss
+++ b/app/sass/_global/icons.scss
@@ -7,7 +7,7 @@
 // Font Icon Sass Map
 $icons: ( plus: "\f055" );
   minus: "\f056",
-  arrow-down: "\f063",
+  arrow-down: "\f063",dfd
   arrow-up: "\f062",
   chevron-up: "\f077",
   chevron-down: "\f078",
