--- a/app/sass/style.css
+++ b/app/sass/style.css
@@ -15,7 +15,8 @@
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  color: purple; }
 
 .clearfix:before {
   content: "";
